--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -9,7 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     
     <!-- link estilos propios -->
-    <link rel="stylesheet" href="css/estilos.css">
+    <link rel="stylesheet" href="../css/estilos.css">
 
     <!-- link google fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -26,7 +26,7 @@
             <nav class="navbar fixed-top navbar-expand-lg shadow p-3">
                 <div class="container">
                     <a class="navbar-brand" href="#">
-                        <img src="img/2logo.png" alt="logo" id="logo" width="75" height="75"> 
+                        <img src="../img/2logo.png" alt="logo" id="logo" width="75" height="75"> 
                         <h1> Cecilia Ceccoli <br> Servicios Lingüísticos</h1>
                     </a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -34,11 +34,11 @@
                     </button>
                     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                         <div class="navbar-nav fs-4">
-                            <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
-                            <a class="nav-link" href="pages/traducciones.html">Traducciones</a>
-                            <a class="nav-link" href="pages/subtitulados.html">Subtitulados</a>
-                            <a class="nav-link" href="pages/enseñanza.html">Enseñanza</a>
-                            <a class="nav-link" href="pages/contacto.html">Contacto</a>
+                            <a class="nav-link" aria-current="page" href="../index.html">Inicio</a>
+                            <a class="nav-link" href="../pages/traducciones.html">Traducciones</a>
+                            <a class="nav-link" href="../pages/subtitulados.html">Subtitulados</a>
+                            <a class="nav-link" href="../pages/enseñanza.html">Enseñanza</a>
+                            <a class="nav-link active" href="../pages/contacto.html">Contacto</a>
                         </div>
                     </div>
                 </div>
@@ -48,33 +48,35 @@
   
     <main class="shadow">
         <div class="intro">
-            <h2>Bienvenidos a mi sitio</h2>
+            <h2>Gracias por su interés</h2>
+            <p class="pintro">Siéntase libre de realizar la consulta que desee. Puede usar en el botón de Whatsapp para chatear directamente conmigo, o bien completar el siguiente formulario para recibir, a la brevedad, una respuesta por correo electrónico.
+            </p>
+            <div id="wa1">
+                <a href="https://api.whatsapp.com/send?phone=542616536281">
+                    <svg class="wa1" xmlns="http://www.w3.org/2000/svg" width="65" height="65" fill="currentColor" class="bi bi-whatsapp" viewBox="0 0 16 16">
+                    <path d="M13.601 2.326A7.854 7.854 0 0 0 7.994 0C3.627 0 .068 3.558.064 7.926c0 1.399.366 2.76 1.057 3.965L0 16l4.204-1.102a7.933 7.933 0 0 0 3.79.965h.004c4.368 0 7.926-3.558 7.93-7.93A7.898 7.898 0 0 0 13.6 2.326zM7.994 14.521a6.573 6.573 0 0 1-3.356-.92l-.24-.144-2.494.654.666-2.433-.156-.251a6.56 6.56 0 0 1-1.007-3.505c0-3.626 2.957-6.584 6.591-6.584a6.56 6.56 0 0 1 4.66 1.931 6.557 6.557 0 0 1 1.928 4.66c-.004 3.639-2.961 6.592-6.592 6.592zm3.615-4.934c-.197-.099-1.17-.578-1.353-.646-.182-.065-.315-.099-.445.099-.133.197-.513.646-.627.775-.114.133-.232.148-.43.05-.197-.1-.836-.308-1.592-.985-.59-.525-.985-1.175-1.103-1.372-.114-.198-.011-.304.088-.403.087-.088.197-.232.296-.346.1-.114.133-.198.198-.33.065-.134.034-.248-.015-.347-.05-.099-.445-1.076-.612-1.47-.16-.389-.323-.335-.445-.34-.114-.007-.247-.007-.38-.007a.729.729 0 0 0-.529.247c-.182.198-.691.677-.691 1.654 0 .977.71 1.916.81 2.049.098.133 1.394 2.132 3.383 2.992.47.205.84.326 1.129.418.475.152.904.129 1.246.08.38-.058 1.171-.48 1.338-.943.164-.464.164-.86.114-.943-.049-.084-.182-.133-.38-.232z"/>
+                    </svg>
+                </a>
+            </div>
         </div>
-        <section class="container">
-            <div class="row">
-                <div class="col-sm-12 col-md-6 overflow-hidden">
-                    <img class="multimedia" src="img/traduccion.png" alt="Ilustración1">
-                </div>
-                <div class="col-sm-12 col-md-6">
-                    <p>Soy una lingüista entusiasta con gran
-                        curiosidad por la interacción de culturas e
-                        idiomas. Me caracterizan un marcado
-                        perfeccionismo y accesibilidad a la hora de
-                        trabajar, tanto en forma independiente como
-                        en equipo.
-                    </p>
-                </div>
+        <section class="form">
+            <div class="mb-3">
+                <label for="exampleFormControlInput1" class="form-label">Nombre</label>
+                <input type="text" class="form-control" id="FormControlInput1" placeholder="Ej. Juan Pérez">
             </div>
-            <hr>
-            <div class="row g-4">
-                <div class="col-sm-12 col-md-6">
-                    <p>Los idiomas me permiten interiorizarme en un nuevo mundo lingüístico con cada trabajo y hallar la forma más adecuada de abrir esa puerta a otras culturas. Es un camino fascinante con gran crecimiento en cada nuevo desafío y para lo que me capacito regularmente.
-                    </p>
-                </div>
-                <div class="col-sm-12 col-md-6 overflow-hidden">
-                    <img class="multimedia" src="img/ww.jpg" alt="Mujer Trabajando">
-                </div>
+            <div class="mb-3">
+                <label for="exampleFormControlInput1" class="form-label">Teléfono</label>
+                <input type="number" class="form-control" id="FormControlInput1" placeholder="Ej. +5411123456">
             </div>
+            <div class="mb-3">
+                <label for="exampleFormControlInput1" class="form-label">E-mail</label>
+                <input type="email" class="form-control" id="FormControlInput1" placeholder="name@example.com">
+            </div>
+            <div class="mb-3">
+                <label for="exampleFormControlTextarea1" class="form-label">Detalle su consulta</label>
+                <textarea class="form-control" id="FormControlTextarea1" rows="5"></textarea>
+            </div>
+            <button type="submit" class="btn btn-primary">Enviar</button>
         </section>
     </main>
 
@@ -107,6 +109,6 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous">
     </script>
-    
+
 </body>
 </html>
