--- a/pages/subtitulados.html
+++ b/pages/subtitulados.html
@@ -9,7 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     
     <!-- link estilos propios -->
-    <link rel="stylesheet" href="css/estilos.css">
+    <link rel="stylesheet" href="../css/estilos.css">
 
     <!-- link google fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -26,7 +26,7 @@
             <nav class="navbar fixed-top navbar-expand-lg shadow p-3">
                 <div class="container">
                     <a class="navbar-brand" href="#">
-                        <img src="img/2logo.png" alt="logo" id="logo" width="75" height="75"> 
+                        <img src="../img/2logo.png" alt="logo" id="logo" width="75" height="75"> 
                         <h1> Cecilia Ceccoli <br> Servicios Lingüísticos</h1>
                     </a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -34,11 +34,11 @@
                     </button>
                     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                         <div class="navbar-nav fs-4">
-                            <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
-                            <a class="nav-link" href="pages/traducciones.html">Traducciones</a>
-                            <a class="nav-link" href="pages/subtitulados.html">Subtitulados</a>
-                            <a class="nav-link" href="pages/enseñanza.html">Enseñanza</a>
-                            <a class="nav-link" href="pages/contacto.html">Contacto</a>
+                            <a class="nav-link" aria-current="page" href="../index.html">Inicio</a>
+                            <a class="nav-link" href="../pages/traducciones.html">Traducciones</a>
+                            <a class="nav-link active" href="../pages/subtitulados.html">Subtitulados</a>
+                            <a class="nav-link" href="../pages/enseñanza.html">Enseñanza</a>
+                            <a class="nav-link" href="../pages/contacto.html">Contacto</a>
                         </div>
                     </div>
                 </div>
@@ -48,31 +48,17 @@
   
     <main class="shadow">
         <div class="intro">
-            <h2>Bienvenidos a mi sitio</h2>
+            <h2>Servicio de subtitulado de videos</h2>
+            <p class="pintro">Recientemente, pude conocer esta rama de la traducción que combina mi gusto por lo lingüístico con el disfrute de lo audiovisual. A través de la UTN Chaco, realicé una diplomatura en Traducción Audiovisual para desempeñarme en subtitulado, doblaje y audiodescripción.
+            </p>
         </div>
         <section class="container">
-            <div class="row">
-                <div class="col-sm-12 col-md-6 overflow-hidden">
-                    <img class="multimedia" src="img/traduccion.png" alt="Ilustración1">
+            <div class="row" id="trad">
+                <div class="col-sm-12 col-md-6">
+                    <img class="multimedia" src="../img/ejemplo1.png" alt="ejemplo1">
                 </div>
                 <div class="col-sm-12 col-md-6">
-                    <p>Soy una lingüista entusiasta con gran
-                        curiosidad por la interacción de culturas e
-                        idiomas. Me caracterizan un marcado
-                        perfeccionismo y accesibilidad a la hora de
-                        trabajar, tanto en forma independiente como
-                        en equipo.
-                    </p>
-                </div>
-            </div>
-            <hr>
-            <div class="row g-4">
-                <div class="col-sm-12 col-md-6">
-                    <p>Los idiomas me permiten interiorizarme en un nuevo mundo lingüístico con cada trabajo y hallar la forma más adecuada de abrir esa puerta a otras culturas. Es un camino fascinante con gran crecimiento en cada nuevo desafío y para lo que me capacito regularmente.
-                    </p>
-                </div>
-                <div class="col-sm-12 col-md-6 overflow-hidden">
-                    <img class="multimedia" src="img/ww.jpg" alt="Mujer Trabajando">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolor veniam ipsam atque eaque dolorum. Magni aperiam error illo. Perferendis, rerum! Reiciendis, vitae quod ipsum quidem soluta perspiciatis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus officia nostrum adipisci eaque obcaecati ullam aperiam dicta voluptas id, porro inventore incidunt perferendis! </p>
                 </div>
             </div>
         </section>
@@ -107,6 +93,6 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous">
     </script>
-    
 </body>
 </html>
+  
