--- a/pages/traducciones.html
+++ b/pages/traducciones.html
@@ -9,7 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     
     <!-- link estilos propios -->
-    <link rel="stylesheet" href="css/estilos.css">
+    <link rel="stylesheet" href="../css/estilos.css">
 
     <!-- link google fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -26,7 +26,7 @@
             <nav class="navbar fixed-top navbar-expand-lg shadow p-3">
                 <div class="container">
                     <a class="navbar-brand" href="#">
-                        <img src="img/2logo.png" alt="logo" id="logo" width="75" height="75"> 
+                        <img src="../img/2logo.png" alt="logo" id="logo" width="75" height="75"> 
                         <h1> Cecilia Ceccoli <br> Servicios Lingüísticos</h1>
                     </a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -34,11 +34,11 @@
                     </button>
                     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                         <div class="navbar-nav fs-4">
-                            <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
-                            <a class="nav-link" href="pages/traducciones.html">Traducciones</a>
-                            <a class="nav-link" href="pages/subtitulados.html">Subtitulados</a>
-                            <a class="nav-link" href="pages/enseñanza.html">Enseñanza</a>
-                            <a class="nav-link" href="pages/contacto.html">Contacto</a>
+                            <a class="nav-link" aria-current="page" href="../index.html">Inicio</a>
+                            <a class="nav-link active" href="../pages/traducciones.html">Traducciones</a>
+                            <a class="nav-link" href="../pages/subtitulados.html">Subtitulados</a>
+                            <a class="nav-link" href="../pages/enseñanza.html">Enseñanza</a>
+                            <a class="nav-link" href="../pages/contacto.html">Contacto</a>
                         </div>
                     </div>
                 </div>
@@ -48,31 +48,24 @@
   
     <main class="shadow">
         <div class="intro">
-            <h2>Bienvenidos a mi sitio</h2>
+            <h2>Servicio de traducciones Inglés a Español o Español a Inglés</h2>
+            <p class="pintro">He colaborado con proyectos de diversos ámbitos, desde el inglés al español y viceversa. He trabajado con textos turísticos, literarios, de TI, de producción musical, así como en currículums y resúmenes de investigación.
+            </p>
         </div>
         <section class="container">
             <div class="row">
-                <div class="col-sm-12 col-md-6 overflow-hidden">
-                    <img class="multimedia" src="img/traduccion.png" alt="Ilustración1">
-                </div>
-                <div class="col-sm-12 col-md-6">
-                    <p>Soy una lingüista entusiasta con gran
-                        curiosidad por la interacción de culturas e
-                        idiomas. Me caracterizan un marcado
-                        perfeccionismo y accesibilidad a la hora de
-                        trabajar, tanto en forma independiente como
-                        en equipo.
+                <div class="col-sm-12 col-md-5">
+                    <p>Ej. párrafo idioma 1 - Lorem ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolor veniam ipsam atque eaque dolorum. Magni aperiam error illo. Perferendis, rerum! Reiciendis.
                     </p>
                 </div>
-            </div>
-            <hr>
-            <div class="row g-4">
-                <div class="col-sm-12 col-md-6">
-                    <p>Los idiomas me permiten interiorizarme en un nuevo mundo lingüístico con cada trabajo y hallar la forma más adecuada de abrir esa puerta a otras culturas. Es un camino fascinante con gran crecimiento en cada nuevo desafío y para lo que me capacito regularmente.
-                    </p>
+                <div class="col-sm-12 col-md-2">
+                    <svg id="flecha" xmlns="http://www.w3.org/2000/svg" width="60" height="60" fill="currentColor" class="bi bi-arrow-left-right" viewBox="0 0 16 16">
+                        <path fill-rule="evenodd" d="M1 11.5a.5.5 0 0 0 .5.5h11.793l-3.147 3.146a.5.5 0 0 0 .708.708l4-4a.5.5 0 0 0 0-.708l-4-4a.5.5 0 0 0-.708.708L13.293 11H1.5a.5.5 0 0 0-.5.5zm14-7a.5.5 0 0 1-.5.5H2.707l3.147 3.146a.5.5 0 1 1-.708.708l-4-4a.5.5 0 0 1 0-.708l4-4a.5.5 0 1 1 .708.708L2.707 4H14.5a.5.5 0 0 1 .5.5z"/>
+                    </svg>
                 </div>
-                <div class="col-sm-12 col-md-6 overflow-hidden">
-                    <img class="multimedia" src="img/ww.jpg" alt="Mujer Trabajando">
+                <div class="col-sm-12 col-md-5">
+                    <p>Ej. párrafo idioma 2 - Lorem ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolor veniam ipsam atque eaque dolorum. Magni aperiam error illo. Perferendis, rerum! Reiciendis.
+                    </p>
                 </div>
             </div>
         </section>
@@ -107,6 +100,6 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous">
     </script>
-    
+
 </body>
 </html>
