--- a/pages/subtitulados.html
+++ b/pages/subtitulados.html
@@ -9,7 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     
     <!-- link estilos propios -->
-    <link rel="stylesheet" href="../css/estilos.css">
+    <link rel="stylesheet" href="../css/styles.css">
 
     <!-- link google fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -35,10 +35,10 @@
                     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                         <div class="navbar-nav fs-4">
                             <a class="nav-link" aria-current="page" href="../index.html">Inicio</a>
-                            <a class="nav-link" href="../pages/traducciones.html">Traducciones</a>
-                            <a class="nav-link active" href="../pages/subtitulados.html">Subtitulados</a>
-                            <a class="nav-link" href="../pages/enseñanza.html">Enseñanza</a>
-                            <a class="nav-link" href="../pages/contacto.html">Contacto</a>
+                            <a class="nav-link" href="traducciones.html">Traducciones</a>
+                            <a class="nav-link active" href="subtitulados.html">Subtitulados</a>
+                            <a class="nav-link" href="enseñanza.html">Enseñanza</a>
+                            <a class="nav-link" href="contacto.html">Contacto</a>
                         </div>
                     </div>
                 </div>
@@ -55,7 +55,7 @@
         <section class="container">
             <div class="row" id="trad">
                 <div class="col-sm-12 col-md-6">
-                    <img class="multimedia" src="../img/ejemplo1.png" alt="ejemplo1">
+                    <img class="multimedia" src="../img/ejemplo1.png" alt="Subtitulado Kung-Fu Panda">
                 </div>
                 <div class="col-sm-12 col-md-6">
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolor veniam ipsam atque eaque dolorum. Magni aperiam error illo. Perferendis, rerum! Reiciendis, vitae quod ipsum quidem soluta perspiciatis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus officia nostrum adipisci eaque obcaecati ullam aperiam dicta voluptas id, porro inventore incidunt perferendis! </p>
