--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -9,7 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     
     <!-- link estilos propios -->
-    <link rel="stylesheet" href="../css/estilos.css">
+    <link rel="stylesheet" href="../css/styles.css">
 
     <!-- link google fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -35,10 +35,10 @@
                     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                         <div class="navbar-nav fs-4">
                             <a class="nav-link" aria-current="page" href="../index.html">Inicio</a>
-                            <a class="nav-link" href="../pages/traducciones.html">Traducciones</a>
-                            <a class="nav-link" href="../pages/subtitulados.html">Subtitulados</a>
-                            <a class="nav-link" href="../pages/enseñanza.html">Enseñanza</a>
-                            <a class="nav-link active" href="../pages/contacto.html">Contacto</a>
+                            <a class="nav-link" href="traducciones.html">Traducciones</a>
+                            <a class="nav-link" href="subtitulados.html">Subtitulados</a>
+                            <a class="nav-link" href="enseñanza.html">Enseñanza</a>
+                            <a class="nav-link active" href="contacto.html">Contacto</a>
                         </div>
                     </div>
                 </div>
@@ -61,19 +61,19 @@
         </div>
         <section class="form">
             <div class="mb-3">
-                <label for="exampleFormControlInput1" class="form-label">Nombre</label>
+                <label for="FormControlInputNombre" class="form-label">Nombre</label>
                 <input type="text" class="form-control" id="FormControlInput1" placeholder="Ej. Juan Pérez">
             </div>
             <div class="mb-3">
-                <label for="exampleFormControlInput1" class="form-label">Teléfono</label>
+                <label for="FormControlInputTelefono" class="form-label">Teléfono</label>
                 <input type="number" class="form-control" id="FormControlInput1" placeholder="Ej. +5411123456">
             </div>
             <div class="mb-3">
-                <label for="exampleFormControlInput1" class="form-label">E-mail</label>
+                <label for="FormControlInputE-mail" class="form-label">E-mail</label>
                 <input type="email" class="form-control" id="FormControlInput1" placeholder="name@example.com">
             </div>
             <div class="mb-3">
-                <label for="exampleFormControlTextarea1" class="form-label">Detalle su consulta</label>
+                <label for="FormControlTextareaDetalle" class="form-label">Detalle su consulta</label>
                 <textarea class="form-control" id="FormControlTextarea1" rows="5"></textarea>
             </div>
             <button type="submit" class="btn btn-primary">Enviar</button>
