--- a/pages/traducciones.html
+++ b/pages/traducciones.html
@@ -9,7 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     
     <!-- link estilos propios -->
-    <link rel="stylesheet" href="../css/estilos.css">
+    <link rel="stylesheet" href="../css/styles.css">
 
     <!-- link google fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -35,10 +35,10 @@
                     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                         <div class="navbar-nav fs-4">
                             <a class="nav-link" aria-current="page" href="../index.html">Inicio</a>
-                            <a class="nav-link active" href="../pages/traducciones.html">Traducciones</a>
-                            <a class="nav-link" href="../pages/subtitulados.html">Subtitulados</a>
-                            <a class="nav-link" href="../pages/enseñanza.html">Enseñanza</a>
-                            <a class="nav-link" href="../pages/contacto.html">Contacto</a>
+                            <a class="nav-link active" href="traducciones.html">Traducciones</a>
+                            <a class="nav-link" href="subtitulados.html">Subtitulados</a>
+                            <a class="nav-link" href="enseñanza.html">Enseñanza</a>
+                            <a class="nav-link" href="contacto.html">Contacto</a>
                         </div>
                     </div>
                 </div>
