--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -62,21 +62,21 @@
         <section class="form">
             <div class="mb-3">
                 <label for="FormControlInputNombre" class="form-label">Nombre</label>
-                <input type="text" class="form-control" id="FormControlInput1" placeholder="Ej. Juan Pérez">
+                <input type="text" class="form" placeholder="Ej. Juan Pérez">
             </div>
             <div class="mb-3">
                 <label for="FormControlInputTelefono" class="form-label">Teléfono</label>
-                <input type="number" class="form-control" id="FormControlInput1" placeholder="Ej. +5411123456">
+                <input type="number" class="form" placeholder="Ej. +5411123456">
             </div>
             <div class="mb-3">
                 <label for="FormControlInputE-mail" class="form-label">E-mail</label>
-                <input type="email" class="form-control" id="FormControlInput1" placeholder="name@example.com">
+                <input type="email" class="form" placeholder="name@example.com">
             </div>
             <div class="mb-3">
                 <label for="FormControlTextareaDetalle" class="form-label">Detalle su consulta</label>
-                <textarea class="form-control" id="FormControlTextarea1" rows="5"></textarea>
+                <textarea class="form" rows="5"></textarea>
             </div>
-            <button type="submit" class="btn btn-primary">Enviar</button>
+            <button type="submit" class="boton">Enviar</button>
         </section>
     </main>
 
