--- a/index.html
+++ b/index.html
@@ -47,16 +47,16 @@
     </header>
   
     <main class="shadow">
-        <div class="intro">
+        <div class="divintro">
             <h2>Bienvenidos a mi sitio</h2>
         </div>
         <section class="container">
             <div class="row">
                 <div class="col-sm-12 col-md-6 overflow-hidden">
-                    <img class="multimedia" src="img/traduccion.png" alt="Ilustración1">
+                    <img class="multimedia" src="img/traduccion.png" alt="Ilustración idiomas">
                 </div>
                 <div class="col-sm-12 col-md-6">
-                    <p>Soy una lingüista entusiasta con gran
+                    <p class="pdescription">Soy una lingüista entusiasta con gran
                         curiosidad por la interacción de culturas e
                         idiomas. Me caracterizan un marcado
                         perfeccionismo y accesibilidad a la hora de
@@ -68,7 +68,7 @@
             <hr>
             <div class="row g-4">
                 <div class="col-sm-12 col-md-6">
-                    <p>Los idiomas me permiten interiorizarme en un nuevo mundo lingüístico con cada trabajo y hallar la forma más adecuada de abrir esa puerta a otras culturas. Es un camino fascinante con gran crecimiento en cada nuevo desafío y para lo que me capacito regularmente.
+                    <p class="pdescription">Los idiomas me permiten interiorizarme en un nuevo mundo lingüístico con cada trabajo y hallar la forma más adecuada de abrir esa puerta a otras culturas. Es un camino fascinante con gran crecimiento en cada nuevo desafío y para lo que me capacito regularmente.
                     </p>
                 </div>
                 <div class="col-sm-12 col-md-6 overflow-hidden">
@@ -79,7 +79,7 @@
     </main>
 
     <footer>
-        <p>© Copyright 2022 - Cecilia Ceccoli <br>
+        <p class="pdescription">© Copyright 2022 - Cecilia Ceccoli <br>
         Todos los derechos reservados.</p>
         <div class="social">
             <a href="https://ar.linkedin.com/in/cecilia-ceccoli-67b5134b">
