--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -47,7 +47,7 @@
     </header>
   
     <main class="shadow">
-        <div class="intro">
+        <div class="divintro">
             <h2>Gracias por su interés</h2>
             <p class="pintro">Siéntase libre de realizar la consulta que desee. Puede usar en el botón de Whatsapp para chatear directamente conmigo, o bien completar el siguiente formulario para recibir, a la brevedad, una respuesta por correo electrónico.
             </p>
