--- a/pages/enseñanza.html
+++ b/pages/enseñanza.html
@@ -47,7 +47,7 @@
     </header>
   
     <main class="shadow">
-        <div class="intro">
+        <div class="divintro">
             <h2>Servicio de enseñanza de inglés y español</h2>
         </div>
         <section>
