--- a/pages/subtitulados.html
+++ b/pages/subtitulados.html
@@ -47,7 +47,7 @@
     </header>
   
     <main class="shadow">
-        <div class="intro">
+        <div class="divintro">
             <h2>Servicio de subtitulado de videos</h2>
             <p class="pintro">Recientemente, pude conocer esta rama de la traducción que combina mi gusto por lo lingüístico con el disfrute de lo audiovisual. A través de la UTN Chaco, realicé una diplomatura en Traducción Audiovisual para desempeñarme en subtitulado, doblaje y audiodescripción.
             </p>
@@ -58,7 +58,7 @@
                     <img class="multimedia" src="../img/ejemplo1.png" alt="Subtitulado Kung-Fu Panda">
                 </div>
                 <div class="col-sm-12 col-md-6">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolor veniam ipsam atque eaque dolorum. Magni aperiam error illo. Perferendis, rerum! Reiciendis, vitae quod ipsum quidem soluta perspiciatis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus officia nostrum adipisci eaque obcaecati ullam aperiam dicta voluptas id, porro inventore incidunt perferendis! </p>
+                    <p class="pdescription">Lorem ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolor veniam ipsam atque eaque dolorum. Magni aperiam error illo. Perferendis, rerum! Reiciendis, vitae quod ipsum quidem soluta perspiciatis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus officia nostrum adipisci eaque obcaecati ullam aperiam dicta voluptas id, porro inventore incidunt perferendis! </p>
                 </div>
             </div>
         </section>
