--- a/pages/traducciones.html
+++ b/pages/traducciones.html
@@ -47,7 +47,7 @@
     </header>
   
     <main class="shadow">
-        <div class="intro">
+        <div class="divintro">
             <h2>Servicio de traducciones Inglés a Español o Español a Inglés</h2>
             <p class="pintro">He colaborado con proyectos de diversos ámbitos, desde el inglés al español y viceversa. He trabajado con textos turísticos, literarios, de TI, de producción musical, así como en currículums y resúmenes de investigación.
             </p>
@@ -55,7 +55,7 @@
         <section class="container">
             <div class="row">
                 <div class="col-sm-12 col-md-5">
-                    <p>Ej. párrafo idioma 1 - Lorem ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolor veniam ipsam atque eaque dolorum. Magni aperiam error illo. Perferendis, rerum! Reiciendis.
+                    <p class="pdescription">Ej. párrafo idioma 1 - Lorem ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolor veniam ipsam atque eaque dolorum. Magni aperiam error illo. Perferendis, rerum! Reiciendis.
                     </p>
                 </div>
                 <div class="col-sm-12 col-md-2">
@@ -64,7 +64,7 @@
                     </svg>
                 </div>
                 <div class="col-sm-12 col-md-5">
-                    <p>Ej. párrafo idioma 2 - Lorem ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolor veniam ipsam atque eaque dolorum. Magni aperiam error illo. Perferendis, rerum! Reiciendis.
+                    <p class="pdescription">Ej. párrafo idioma 2 - Lorem ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolor veniam ipsam atque eaque dolorum. Magni aperiam error illo. Perferendis, rerum! Reiciendis.
                     </p>
                 </div>
             </div>
