--- a/pages/enseñanza.html
+++ b/pages/enseñanza.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- Keywords -->
+    <meta name="keywords" content="cecilia, ceccoli, licenciada en filología inglesa, lingüista, learning, servicios lingüísticos, idioma, capacitación, clases, inglés, english, español, spanish, linguistic services, cultura, culture, enseñanza, education, virtual classes">
     
     <!-- link estilos bootsrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
@@ -48,7 +51,7 @@
   
     <main class="shadow">
         <div class="divintro">
-            <h2>Servicio de enseñanza de inglés y español</h2>
+            <h2>Servicio de enseñanza de Inglés y Español</h2>
         </div>
         <section>
             <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="true">
