--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -5,8 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" sizes="32x32" href="../img/favicon-32x322.png" alt="favicon logo">
+
+
     <!-- Keywords -->
     <meta name="keywords" content="cecilia, ceccoli, licenciada en filología inglesa, lingüista, enseñanza, learning, servicios lingüísticos, idioma, capacitación, clases, inglés, english, español, spanish, linguistic services, cultura, culture, contacto, contact, información, information">
+
+    <!-- Description -->
+    <meta name="description" content="Hola, soy Cecilia Ceccoli, licenciada en filología inglesa y experta en idioma inglés y español. Puedes escribirme por whatsapp o mis redes sociales.">
     
     <!-- link estilos bootsrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
@@ -19,7 +26,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Slab:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
 
-    <title>Cecilia Ceccoli - Servicios Lingüísticos</title>
+    <title>Cecilia Ceccoli - Contacto</title>
 
 </head>
 
