--- a/pages/subtitulados.html
+++ b/pages/subtitulados.html
@@ -70,6 +70,14 @@
                 <div class="col-sm-12 col-md-6">
                     <p class="pdescription">Lorem ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolor veniam ipsam atque eaque dolorum. Magni aperiam error illo. Perferendis, rerum! Reiciendis, vitae quod ipsum quidem soluta perspiciatis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus officia nostrum adipisci eaque obcaecati ullam aperiam dicta voluptas id, porro inventore incidunt perferendis! </p>
                 </div>
+                <hr>
+                <div class="col-sm-12 col-md-6">
+                    <p class="pdescription">Lorem ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolor veniam ipsam atque eaque dolorum. Magni aperiam error illo. Perferendis, rerum! Reiciendis, vitae quod ipsum quidem soluta perspiciatis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus officia nostrum adipisci eaque obcaecati ullam aperiam dicta voluptas id, porro inventore incidunt perferendis! </p>
+                </div>
+                <div class="col-sm-12 col-md-6">
+                    <img class="multimedia" src="../img/ejemplo2.png" alt="Subtitulado Kung-Fu Panda">
+                </div>
+
             </div>
         </section>
     </main>
