Incorporación de contenido

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <nav class="navbar fixed-top navbar-expand-lg shadow p-3">
                 <div class="container">
                     <a class="navbar-brand" href="#">
-                        <img src="img/2logo.png" alt="logo" id="logo"> 
+                        <img src="img/2logo.svg" alt="logo" id="logo"> 
                         <h1> Cecilia Ceccoli <br> Servicios Lingüísticos</h1>
                     </a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -65,19 +65,14 @@
                     <img class="multimedia" src="img/traduccion.png" alt="Ilustración idiomas">
                 </div>
                 <div class="col-sm-12 col-md-6">
-                    <p class="pdescription">Soy una lingüista entusiasta con gran
-                        curiosidad por la interacción de culturas e
-                        idiomas. Me caracterizan un marcado
-                        perfeccionismo y accesibilidad a la hora de
-                        trabajar, tanto en forma independiente como
-                        en equipo.
+                    <p class="pdescription">Soy una lingüista entusiasta con gran curiosidad por la interacción de culturas e idiomas. Me caracterizan un marcado perfeccionismo y accesibilidad a la hora de trabajar, tanto en forma independiente como en equipo. Me interesa brindar soluciones idiomáticas al mundo entero haciendo un trabajo a medida con excelencia.
                     </p>
                 </div>
             </div>
             <hr>
             <div class="row g-4">
                 <div class="col-sm-12 col-md-6">
-                    <p class="pdescription">Los idiomas me permiten interiorizarme en un nuevo mundo lingüístico con cada trabajo y hallar la forma más adecuada de abrir esa puerta a otras culturas. Es un camino fascinante con gran crecimiento en cada nuevo desafío y para lo que me capacito regularmente.
+                    <p class="pdescription">Los idiomas me permiten interiorizarme en un nuevo mundo lingüístico con cada trabajo y hallar la forma más adecuada de abrir esa puerta a otras culturas. Es un camino fascinante con gran crecimiento en cada nuevo desafío y para lo que me capacito regularmente. Desde un enfoque ordenado y práctico brindo acceso a cualquier interesado a herramientas indispensables en un mundo globalizado.
                     </p>
                 </div>
                 <div class="col-sm-12 col-md-6 overflow-hidden">
