--- a/pages/enseñanza.html
+++ b/pages/enseñanza.html
@@ -36,7 +36,7 @@
             <nav class="navbar fixed-top navbar-expand-lg shadow p-3">
                 <div class="container">
                     <a class="navbar-brand" href="#">
-                        <img src="../img/2logo.png" alt="logo" id="logo" width="75" height="75"> 
+                        <img src="../img/2logo.svg" alt="logo" id="logo"> 
                         <h1> Cecilia Ceccoli <br> Servicios Lingüísticos</h1>
                     </a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -88,7 +88,7 @@
                 </button>
             </div>
             <div>
-                <p class="pintro" id="pensenanza"> La enseñanza del inglés como segunda lengua ha marcado mi rumbo profesional durante más de quince años. He trabajado en clases particulares y grupales, especializándome en adultos de todos los niveles de inglés. Los cursos se preparan a medida del alumno o alumna según sus gustos y necesidades.
+                <p class="pintro" id="pensenanza"> La enseñanza del inglés como segunda lengua ha marcado mi rumbo profesional durante más de quince años. He trabajado en clases particulares y grupales, especializándome en adultos de todos los niveles de inglés. Los cursos se preparan a medida del alumno o alumna según sus gustos y necesidades. Bajo la modalidad de clases virtuales he logrado expandir mis servicios a nivel mundial, permitiendo un enriquecimiento cultural y profesional que marcan mi carrera.
                 </p>
             </div>
         </section>
