--- a/pages/subtitulados.html
+++ b/pages/subtitulados.html
@@ -36,7 +36,7 @@
             <nav class="navbar fixed-top navbar-expand-lg shadow p-3">
                 <div class="container">
                     <a class="navbar-brand" href="#">
-                        <img src="../img/2logo.png" alt="logo" id="logo" width="75" height="75"> 
+                        <img src="../img/2logo.svg" alt="logo" id="logo"> 
                         <h1> Cecilia Ceccoli <br> Servicios Lingüísticos</h1>
                     </a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -68,11 +68,11 @@
                     <img class="multimedia" src="../img/ejemplo1.png" alt="Subtitulado Kung-Fu Panda">
                 </div>
                 <div class="col-sm-12 col-md-6">
-                    <p class="pdescription">Lorem ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolor veniam ipsam atque eaque dolorum. Magni aperiam error illo. Perferendis, rerum! Reiciendis, vitae quod ipsum quidem soluta perspiciatis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus officia nostrum adipisci eaque obcaecati ullam aperiam dicta voluptas id, porro inventore incidunt perferendis! </p>
+                    <p class="pdescription">El servicio de subtitulado incluye la transcripción del contenido audiovisual en su idioma nativo, permitiendo al autor del contenido transmitir de forma inclusiva y clara su producto. Esta transcripción es adaptada, traducida, temporizada y renderizado</p>
                 </div>
                 <hr>
                 <div class="col-sm-12 col-md-6">
-                    <p class="pdescription">Lorem ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolor veniam ipsam atque eaque dolorum. Magni aperiam error illo. Perferendis, rerum! Reiciendis, vitae quod ipsum quidem soluta perspiciatis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus officia nostrum adipisci eaque obcaecati ullam aperiam dicta voluptas id, porro inventore incidunt perferendis! </p>
+                    <p class="pdescription">Además, todo servicio inlcuye la revisión y control de expresiones gramáticas e idiomáticas regionales. De esta manera el contenido se adapta no solo a personas de distintos idiomas, sino también a personas con dificultades auditivas.</p>
                 </div>
                 <div class="col-sm-12 col-md-6">
                     <img class="multimedia" src="../img/ejemplo2.png" alt="Subtitulado Shrek">
