--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                     <img class="multimedia" src="img/traduccion.png" alt="Ilustración idiomas">
                 </div>
                 <div class="col-sm-12 col-md-6">
-                    <p class="pdescription">Soy una lingüista entusiasta con gran curiosidad por la interacción de culturas e idiomas. Me caracterizan un marcado perfeccionismo y accesibilidad a la hora de trabajar, tanto en forma independiente como en equipo. Me interesa brindar soluciones idiomáticas al mundo entero haciendo un trabajo a medida con excelencia.
+                    <p class="pdescription">Soy una lingüista entusiasta con gran curiosidad por la interacción de culturas e idiomas. Me caracterizan un marcado perfeccionismo y accesibilidad a la hora de trabajar, tanto en forma independiente como en equipo. Me interesa brindar soluciones idiomáticas al mundo entero haciendo un trabajo a medida con excelencia. Me he formado profesionalmente en casas de estudio del altas exigencias, sumando la pasión por los idiomas, cultura y literatura. 
                     </p>
                 </div>
             </div>
