--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -37,7 +37,7 @@
                 <div class="container">
                     <a class="navbar-brand" href="#">
                         <img src="../img/2logo.svg" alt="logo" id="logo"> 
-                        <h1> Cecilia Ceccoli <br> Servicios Lingüísticos</h1>
+                        <h1> Cecilia Ceccoli <br> Contacto</h1>
                     </a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
