--- a/pages/enseñanza.html
+++ b/pages/enseñanza.html
@@ -69,13 +69,13 @@
                 </div>
                 <div class="carousel-inner">
                   <div class="carousel-item active">
-                    <img src="../img/slide1.png" class="d-block w-100" alt="Conversación">
+                    <img src="../img/slide11.png" class="d-block w-100" alt="Conversación">
                   </div>
                   <div class="carousel-item">
-                    <img src="../img/slide2.png" class="d-block w-100" alt="Enseñanza-con-cartel">
+                    <img src="../img/slide2.png" class="d-block w-100" alt="Actividad-interactiva">
                   </div>
                   <div class="carousel-item">
-                    <img src="../img/slide3.png" class="d-block w-100" alt="Oradora">
+                    <img src="../img/slide3.png" class="d-block w-100" alt="Juego-interactivo">
                   </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
