Edición de imágenes

--- a/pages/enseñanza.html
+++ b/pages/enseñanza.html
@@ -61,6 +61,12 @@
             <h2>Servicio de enseñanza de Inglés y Español</h2>
         </div>
         <section>
+            <div>
+                <p class="pintro"> La enseñanza del inglés como segunda lengua ha marcado mi rumbo profesional durante más de quince años. He trabajado en clases particulares y grupales, especializándome en adultos de todos los niveles de inglés. 
+                </p>
+                <p class="pdescription" id="pensenanza"> Los cursos se preparan a medida del alumno o alumna según sus gustos y necesidades. Bajo la modalidad de clases virtuales he logrado expandir mis servicios a nivel mundial, permitiendo un enriquecimiento cultural y profesional que marcan mi carrera.
+                </p>
+            </div>
             <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="true">
                 <div class="carousel-indicators">
                   <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -86,10 +92,6 @@
                   <span class="carousel-control-next-icon" aria-hidden="true"></span>
                   <span class="visually-hidden">Next</span>
                 </button>
-            </div>
-            <div>
-                <p class="pintro" id="pensenanza"> La enseñanza del inglés como segunda lengua ha marcado mi rumbo profesional durante más de quince años. He trabajado en clases particulares y grupales, especializándome en adultos de todos los niveles de inglés. Los cursos se preparan a medida del alumno o alumna según sus gustos y necesidades. Bajo la modalidad de clases virtuales he logrado expandir mis servicios a nivel mundial, permitiendo un enriquecimiento cultural y profesional que marcan mi carrera.
-                </p>
             </div>
         </section>
     </main>
