--- a/pages/traducciones.html
+++ b/pages/traducciones.html
@@ -65,7 +65,7 @@
         <section class="container">
             <div class="row">
                 <div class="col-sm-12 col-md-5">
-                    <p class="pdescription">Ej. párrafo idioma 1 - Lorem ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolor veniam ipsam atque eaque dolorum. Magni aperiam error illo. Perferendis, rerum! Reiciendis.
+                    <p class="pdescription">En este momento hay muchos clientes que trabajan con científicos talentosos para traducir texto griego al árabe y Thabit, con sus grandes habilidades en idiomas, así como grandes habilidades matemáticas, traducido y revisado muchas de las importantes obras griegas.
                     </p>
                 </div>
                 <div class="col-sm-12 col-md-2">
@@ -74,7 +74,7 @@
                     </svg>
                 </div>
                 <div class="col-sm-12 col-md-5">
-                    <p class="pdescription">Ej. párrafo idioma 2 - Lorem ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolor veniam ipsam atque eaque dolorum. Magni aperiam error illo. Perferendis, rerum! Reiciendis.
+                    <p class="pdescription">At this time there were many patrons who employed talented scientists to translate Greek text into Arabic and Thabit, with his great skills in languages as well as great mathematical skills, translated and revised many of the important Greek works.
                     </p>
                 </div>
             </div>
