--- a/pages/subtitulados.html
+++ b/pages/subtitulados.html
@@ -36,7 +36,7 @@
             <nav class="navbar fixed-top navbar-expand-lg shadow p-3">
                 <div class="container">
                     <a class="navbar-brand" href="#">
-                        <img src="../img/2logo.svg" alt="logo" id="logo"> 
+                        <a href="../index.html"><img src="../img/2logo.svg" alt="logo" id="logo"></a> 
                         <h1> Cecilia Ceccoli <br> Subtitulados</h1>
                     </a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
