--- a/pages/traducciones.html
+++ b/pages/traducciones.html
@@ -81,9 +81,12 @@
         </section>
     </main>
 
-    <footer>
-        <p>© Copyright 2022 - Cecilia Ceccoli <br>
-        Todos los derechos reservados.</p>
+    <footer class="container">
+        <div id="footer-marca">
+            <a href="../index.html"></a><img src="../img/2logo.svg" alt="logo" id="logo-footer">
+            <div>© Copyright 2022 - Cecilia Ceccoli <br>
+            Todos los derechos reservados.</div> 
+        </div>
         <div class="social">
             <a href="https://ar.linkedin.com/in/cecilia-ceccoli-67b5134b">
                 <svg class="icon" xmlns="http://www.w3.org/2000/svg" fill="currentColor" id="linkedin" viewBox="0 0 16 16">
