--- a/pages/enseñanza.html
+++ b/pages/enseñanza.html
@@ -67,31 +67,21 @@
                 <p class="pdescription" id="pensenanza"> Los cursos se preparan a medida del alumno o alumna según sus gustos y necesidades. Bajo la modalidad de clases virtuales he logrado expandir mis servicios a nivel mundial, permitiendo un enriquecimiento cultural y profesional que marcan mi carrera.
                 </p>
             </div>
-            <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="true">
-                <div class="carousel-indicators">
-                  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-                  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-                  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+            <div class="grid1 container">
+                <div class="superior">
+                    <img src="../img/foto-alumnos2.png" alt="alumnos-clase-divertida" class="multimedia">
                 </div>
-                <div class="carousel-inner">
-                  <div class="carousel-item active">
-                    <img src="../img/slide11.png" class="d-block w-100" alt="Conversación">
-                  </div>
-                  <div class="carousel-item">
-                    <img src="../img/slide2.png" class="d-block w-100" alt="Actividad-interactiva">
-                  </div>
-                  <div class="carousel-item">
-                    <img src="../img/slide3.png" class="d-block w-100" alt="Juego-interactivo">
-                  </div>
+                <div class="centro">
+                    <img src="../img/foto-alumnos4.png" alt="clase-profesional" class="multimedia">
+                    <img src="../img/foto-alumnos1.png" alt="alumnos-haloween" class="multimedia">
+                    <img src="../img/foto-alumnos3.png" alt="clase-personalizada" class="multimedia">
+                    <img src="../img/foto-alumnos5.png" alt="clase-personalizada1" class="multimedia">
                 </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                  <span class="visually-hidden">Previous</span>
-                </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                  <span class="visually-hidden">Next</span>
-                </button>
+                <div class="inferior">
+                    <div class="pdescription">Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse quasi beatae porro commodi inventore praesentium asperiores eos a ullam veritatis odio, odit in, veniam dolor possimus unde vero voluptates quis.</div>
+                </div>
+
+
             </div>
         </section>
     </main>
