Mediaqueries, hover wa1 y contenido.

--- a/pages/enseñanza.html
+++ b/pages/enseñanza.html
@@ -71,7 +71,9 @@
                 <img src="../img/foto-alumnos4.png" alt="clase-profesional" class="multimedia">
                 <img src="../img/foto-alumnos1.png" alt="alumnos-haloween" class="multimedia">
                 <img src="../img/foto-alumnos3.png" alt="clase-personalizada" class="multimedia">
+                <img src="../img/foto-alumnos2.png" alt="clase-personalizada-juego" class="multimedia">
                 <img src="../img/foto-alumnos5.png" alt="clase-personalizada1" class="multimedia">
+                <img src="../img/foto-alumnos6.png" alt="clase-personalizada2" class="multimedia">
             </div>
         </section>
     </main>
