--- a/pages/traducciones.html
+++ b/pages/traducciones.html
@@ -65,7 +65,7 @@
         <section class="container">
             <div class="row">
                 <div class="col-sm-12 col-md-5">
-                    <p class="pdescription">En este momento hay muchos clientes que trabajan con científicos talentosos para traducir texto griego al árabe y Thabit, con sus grandes habilidades en idiomas, así como grandes habilidades matemáticas, traducido y revisado muchas de las importantes obras griegas.
+                    <p class="pdescription">Ella comienza a bailar, actuando para los desconocidos aunque finge no hacerlo. Gira y mueve su largo cabello de forma seductora. Alberto le ordena que regrese a su regazo, pero ella lo ignora, coqueteando. Él se levanta y la toma del brazo. Ella no le hace caso. “Dale órdenes a tu esposa, ¡no a mí!”
                     </p>
                 </div>
                 <div class="col-sm-12 col-md-2">
@@ -74,7 +74,7 @@
                     </svg>
                 </div>
                 <div class="col-sm-12 col-md-5">
-                    <p class="pdescription">At this time there were many patrons who employed talented scientists to translate Greek text into Arabic and Thabit, with his great skills in languages as well as great mathematical skills, translated and revised many of the important Greek works.
+                    <p class="pdescription">She begins to dance, performing for the strangers, but pretending not to. She swirls waist length hair seductively. Alberto orders her back to his lap. She ignores him, coquettishly. He gets up and grabs her. She brushes him off. "Order your wife around, not me!"
                     </p>
                 </div>
             </div>
