--- a/404.html
+++ b/404.html
@@ -9,10 +9,10 @@
     <link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x322.png" alt="favicon logo">
     
     <!-- Keywords -->
-    <meta name="keywords" content="cecilia, ceccoli, licenciada en filología inglesa, lingüista, enseñanza, learning, servicios lingüísticos, idioma, capacitación, clases, inglés, english, español, spanish, linguistic services, cultura, culture">
+    <meta name="keywords" content="error, 404, pagina no encontrada">
 
     <!-- Description -->
-    <meta name="description" content="Hola, soy Cecilia Ceccoli, licenciada en filología inglesa y experta en idioma inglés y español.">
+    <meta name="description" content="Página no encontrada.">
     
     <!-- link estilos bootsrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
