--- a/404.html
+++ b/404.html
@@ -10,13 +10,10 @@
 
     <!-- Description -->
     <meta name="description" content="Página no encontrada.">
-    
+
     <!-- link estilos bootsrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     
-    <!-- link estilos propios -->
-    <link rel="stylesheet" href="css/styles.css">
-
     <!-- link google fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -26,17 +23,19 @@
 
 </head>
 
-<body>
+<body  style="background-color: #76736f; font-family: 'Josefin Slab', serif">
  
     <main>
-        <div id="404" class="container">
-            <h2>Error 404 - Página no encontrada</h2>
-            <h3>Para volver al inicio haga click en el siguiente botón:</h3>
-            <a href="https://jmiguelmorralla.github.io/proyectoFinalJuanMorralla/index.html">
-                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-house-door-fill wa1" viewBox="0 0 16 16">
-                <path d="M6.5 14.5v-3.505c0-.245.25-.495.5-.495h2c.25 0 .5.25.5.5v3.5a.5.5 0 0 0 .5.5h4a.5.5 0 0 0 .5-.5v-7a.5.5 0 0 0-.146-.354L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293L8.354 1.146a.5.5 0 0 0-.708 0l-6 6A.5.5 0 0 0 1.5 7.5v7a.5.5 0 0 0 .5.5h4a.5.5 0 0 0 .5-.5z"/>
-                </svg>
-            </a>
+        <div class="container text-center mt-5">
+            <h1 style="color: white; ">Error 404 - Página no encontrada</h1>
+            <h2 style="color: white;">Para volver al inicio haga click en el siguiente botón:</h2>
+            <button type="button" class="btn btn-light">
+                <a href="https://jmiguelmorralla.github.io/proyectoFinalJuanMorralla/index.html">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="70" height="70" fill="rgb(203, 126, 193)" class="bi bi-house-door-fill" viewBox="0 0 16 16">
+                    <path d="M6.5 14.5v-3.505c0-.245.25-.495.5-.495h2c.25 0 .5.25.5.5v3.5a.5.5 0 0 0 .5.5h4a.5.5 0 0 0 .5-.5v-7a.5.5 0 0 0-.146-.354L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293L8.354 1.146a.5.5 0 0 0-.708 0l-6 6A.5.5 0 0 0 1.5 7.5v7a.5.5 0 0 0 .5.5h4a.5.5 0 0 0 .5-.5z"/>
+                    </svg>
+                </a>
+            </button>
         </div>
     </main>
 
